add chicken à la king recipe
Created a separate HTML page for the new recipe with a link between the home page and the new recipe page.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/chicken-à-la-king.html">Chicken à la King</a>
     </body>
 </html>
