--- a/recipes/chicken-à-la-king.html
+++ b/recipes/chicken-à-la-king.html
@@ -1,9 +1,68 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Chicken à la King</title>
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Chicken à la King</title>
+  </head>
+
+  <body>
+    <!-- Page heading -->
     <h1>Chicken à la King</h1>
+
+    <!-- Recipe image -->
+    <img
+      src="../img/chicken-à-la-king.jpg"
+      alt="Creamy bowl of Chicken à la King with graded cheese on top."
+      width="300"
+    />
+
+    <!-- Description section -->
+    <h2>Description</h2>
+    <p>
+      Chicken à la King is a simple yet elegant dish, perfect for using up
+      leftover chicken or turkey. Made with a creamy sauce, onions, peppers, and
+      mushrooms, it's a hearty and comforting meal. Serve it over rice, toast,
+      or noodles. It can also be prepared ahead of time and reheated easily.
+    </p>
+
+    <!-- Ingredients section -->
+    <h3>Ingredients</h3>
+    <ul>
+      <li>1/2 cup butter</li>
+      <li>1 cup mushrooms, chopped</li>
+      <li>1 green, red, or yellow bell pepper, chopped</li>
+      <li>1/2 cup flour</li>
+      <li>1 teaspoon salt</li>
+      <li>1/4 teaspoon ground black pepper</li>
+      <li>1 and 1/2 cups milk</li>
+      <li>1 and 1/4 cups hot water</li>
+      <li>4 cooked, boneless chicken breast halves, chopped</li>
+    </ul>
+
+    <!-- Cooking steps section -->
+    <h3>Steps</h3>
+    <ol>
+      <li>Gather all ingredients.</li>
+      <li>
+        Melt the butter in a large skillet over medium heat. Add the onions and
+        cook, stirring occasionally, until they are soft and almost translucent.
+      </li>
+      <li>
+        Then add the mushrooms and bell pepper, and continue to cook for about 5
+        minutes, stirring occasionally.
+      </li>
+      <li>
+        Remove from the heat. Stir in flour, salt, and black pepper. Cook over
+        low heat, stirring constantly, until mixture is bubbly.
+      </li>
+      <li>
+        Stir in milk and water. Increase heat to medium-high and bring to a
+        boil, stirring constantly. Boil and stir for 1 minute.
+      </li>
+      <li>Stir in chicken and heat through.</li>
+      <li>Serve and enjoy!</li>
+    </ol>
+
     <a href="../index.html">Home</a>
+  </body>
 </html>
