create boilerplate for two additional recipes
Created the boilerplate HTML files for two
additional recipes for content to still be added.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/chicken-à-la-king.html">Chicken à la King</a>
+        <a href="./recipes/shakshuka.html">Shakshuka</a>
+        <a href="./recipes/french-onion-soup.html">French Onion Soup</a>
     </body>
 </html>
