complete three recipes
Completed the content for all three of the recipes.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Odin Recipes</title>
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Odin Recipes</title>
+  </head>
 
-    <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/chicken-à-la-king.html">Chicken à la King</a>
+  <body>
+    <h1>Odin Recipes</h1>
+    <h2>Recipes to Explore</h2>
+    <ul>
+      <li><a href="./recipes/chicken-à-la-king.html">Chicken à la King</a></li>
+      <li>
         <a href="./recipes/shakshuka.html">Shakshuka</a>
+      </li>
+      <li>
         <a href="./recipes/french-onion-soup.html">French Onion Soup</a>
-    </body>
+      </li>
+    </ul>
+  </body>
 </html>
