--- a/recipes/shakshuka.html
+++ b/recipes/shakshuka.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Shakshuka</title>
   </head>
 
   <body>
+    <!-- Page heading -->
     <h1>Shakshuka</h1>
+
+    <!-- Recipe image -->
+    <img src="../img/shakshuka.jpg" width="300"/>
+
+    <!-- Description section -->
+    <h2>Description</h2>
+    <p>
+      Shakshuka is a popular and wholesome dish enjoyed in Israel and across the
+      Middle East and North Africa. Made with a rich blend of simmered tomatoes,
+      onions, garlic, and spices, it’s topped with gently poached eggs. This
+      hearty, satisfying meal is both easy to prepare and sure to become a go-to
+      favourite.
+    </p>
+
+    <!-- Ingredients section -->
+    <h3>Ingredients</h3>
+    <ul>
+      <li>2 tablespoons olive oil</li>
+      <li>1 medium onion, diced</li>
+      <li>1 red bell pepper, seeded and diced</li>
+      <li>4 garlic cloves, minced</li>
+      <li>2 teaspoons paprika</li>
+      <li>1 teaspoon cumin</li>
+      <li>1/4 teaspoon chili powder</li>
+      <li>1 can whole peeled tomatoes</li>
+      <li>4 to 6 large eggs</li>
+      <li>salt and pepper, to taste</li>
+      <li>1 small bunch fresh cilantro, chopped</li>
+      <li>1 small bunch fresh parsley, chopped</li>
+    </ul>
+
+    <!-- Cooking steps section -->
+    <h3>Steps</h3>
+    <ol>
+      <li>
+        Heat olive oil in a large sauté pan on medium heat. Add the chopped bell
+        pepper and onion and cook for 5 minutes or until the onion becomes
+        translucent.
+      </li>
+      <li>Add garlic and spices and cook an additional minute.</li>
+      <li>
+        Pour the can of tomatoes and juice into the pan and break down the
+        tomatoes using a large spoon. Season with salt and pepper and bring the
+        sauce to a simmer.
+      </li>
+      <li>
+        Use your large spoon to make small wells in the sauce and crack the eggs
+        into each well. Cook the eggs for 5 to 8 minutes, or until the eggs are
+        done to your liking. You can also cover the pan with a lid to expedite
+        the eggs cooking.
+      </li>
+      <li>Garnish with chopped cilantro and parsley before serving.</li>
+    </ol>
 
     <a href="../index.html">Home</a>
   </body>
