apply basic styling for practice

--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
-    <h2>Recipes to Explore</h2>
-    <ul>
-      <li><a href="./recipes/chicken-à-la-king.html">Chicken à la King</a></li>
-      <li>
+    <h1 class="heading">Odin Recipes</h1>
+    <h2 class="heading">Recipes to Explore</h2>
+    <ul class="list list-no-decoration">
+      <li class="list-item">
+        <a href="./recipes/chicken-à-la-king.html">Chicken à la King</a></li>
+      <li class="list-item">
         <a href="./recipes/shakshuka.html">Shakshuka</a>
       </li>
-      <li>
+      <li class="list-item">
         <a href="./recipes/french-onion-soup.html">French Onion Soup</a>
       </li>
     </ul>
