--- a/recipes/french-onion-soup.html
+++ b/recipes/french-onion-soup.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <title>French Onion Soup</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
 
   <body>
     <!-- Page heading -->
-    <h1>French Onion Soup</h1>
+    <h1 class="heading">French Onion Soup</h1>
 
     <!-- Recipe image -->
-    <img src="../img/french-onion-soup.jpg" width="300" />
+    <img class="recipe-image" src="../img/french-onion-soup.jpg" width="300" />
 
     <!-- Description section -->
-    <h2>Description</h2>
-    <p>
+    <h2 class="heading">Description</h2>
+    <p class="text-content">
       French onion soup, also known as soupe à l'oignon gratinée, is a timeless
       French favourite made with deeply caramelised onions simmered in a rich
       beef stock or broth. It's traditionally topped with crusty bread and
@@ -24,47 +25,49 @@
     </p>
 
     <!-- Ingredients section -->
-    <h3>Ingredients</h3>
-    <ul>
-      <li>1/2 cup unsalted butter</li>
-      <li>2 tablespoons olive oil</li>
-      <li>4 cups sliced onions</li>
-      <li>5 cups beef broth</li>
-      <li>2 tablespoons dry sherry</li>
-      <li>1 teaspoon dried thyme</li>
-      <li>1 pinch salt and pepper to taste</li>
-      <li>4 slices French bread</li>
-      <li>4 slices provolone cheese</li>
-      <li>2 slices Swiss cheese, diced</li>
-      <li>1/4 cup grated Parmesan cheese</li>
+    <h3 class="heading">Ingredients</h3>
+    <ul class="list">
+      <li class="list-item">1/2 cup unsalted butter</li>
+      <li class="list-item">2 tablespoons olive oil</li>
+      <li class="list-item">4 cups sliced onions</li>
+      <li class="list-item">5 cups beef broth</li>
+      <li class="list-item">2 tablespoons dry sherry</li>
+      <li class="list-item">1 teaspoon dried thyme</li>
+      <li class="list-item">1 pinch salt and pepper to taste</li>
+      <li class="list-item">4 slices French bread</li>
+      <li class="list-item">4 slices provolone cheese</li>
+      <li class="list-item">2 slices Swiss cheese, diced</li>
+      <li class="list-item">1/4 cup grated Parmesan cheese</li>
     </ul>
 
     <!-- Cooking steps section -->
-    <h3>Steps</h3>
-    <ol>
-      <li>Gather all ingredients.</li>
-      <li>
+    <h3 class="heading">Steps</h3>
+    <ol class="list">
+      <li class="list-item">Gather all ingredients.</li>
+      <li class="list-item">
         Melt butter with olive oil in an 8-quart stock pot over medium heat. Add
         onions to butter and continually stir until tender and translucent. Do
         not brown the onions.
       </li>
-      <li>
+      <li class="list-item">
         Add beef broth, sherry, and thyme. Season with salt and pepper. Let
         simmer for 30 minutes. Meanwhile, preheat the oven's broiler.
       </li>
-      <li>
+      <li class="list-item">
         Ladle soup into oven-safe serving bowls and place one slice of bread on
         top of each (bread may be broken into pieces if you prefer). Layer each
         slice of bread with a slice of provolone, 1/2 slice diced Swiss and 1
         tablespoon Parmesan cheese.
       </li>
-      <li>
+      <li class="list-item">
         Place bowls on a cookie sheet and broil in the preheated oven until
         cheese bubbles and browns slightly, 2 to 3 minutes.
       </li>
-      <li>Serve hot and enjoy!</li>
+      <li class="list-item">Serve hot and enjoy!</li>
     </ol>
 
-    <a href="../index.html">Home</a>
+    <div class="links">
+      <a href="../index.html">Home</a>
+    </div>
   </body>
 </html>
