--- a/recipes/shakshuka.html
+++ b/recipes/shakshuka.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <title>Shakshuka</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
 
   <body>
     <!-- Page heading -->
-    <h1>Shakshuka</h1>
+    <h1 class="heading">Shakshuka</h1>
 
     <!-- Recipe image -->
-    <img src="../img/shakshuka.jpg" width="300"/>
+    <img class="recipe-image" src="../img/shakshuka.jpg" width="400" />
 
     <!-- Description section -->
-    <h2>Description</h2>
-    <p>
+    <h2 class="heading">Description</h2>
+    <p class="text-content">
       Shakshuka is a popular and wholesome dish enjoyed in Israel and across the
       Middle East and North Africa. Made with a rich blend of simmered tomatoes,
       onions, garlic, and spices, it’s topped with gently poached eggs. This
@@ -23,45 +24,47 @@
     </p>
 
     <!-- Ingredients section -->
-    <h3>Ingredients</h3>
-    <ul>
-      <li>2 tablespoons olive oil</li>
-      <li>1 medium onion, diced</li>
-      <li>1 red bell pepper, seeded and diced</li>
-      <li>4 garlic cloves, minced</li>
-      <li>2 teaspoons paprika</li>
-      <li>1 teaspoon cumin</li>
-      <li>1/4 teaspoon chili powder</li>
-      <li>1 can whole peeled tomatoes</li>
-      <li>4 to 6 large eggs</li>
-      <li>salt and pepper, to taste</li>
-      <li>1 small bunch fresh cilantro, chopped</li>
-      <li>1 small bunch fresh parsley, chopped</li>
+    <h3 class="heading">Ingredients</h3>
+    <ul class="list">
+      <li class="list-item">2 tablespoons olive oil</li>
+      <li class="list-item">1 medium onion, diced</li>
+      <li class="list-item">1 red bell pepper, seeded and diced</li>
+      <li class="list-item">4 garlic cloves, minced</li>
+      <li class="list-item">2 teaspoons paprika</li>
+      <li class="list-item">1 teaspoon cumin</li>
+      <li class="list-item">1/4 teaspoon chili powder</li>
+      <li class="list-item">1 can whole peeled tomatoes</li>
+      <li class="list-item">4 to 6 large eggs</li>
+      <li class="list-item">salt and pepper, to taste</li>
+      <li class="list-item">1 small bunch fresh cilantro, chopped</li>
+      <li class="list-item">1 small bunch fresh parsley, chopped</li>
     </ul>
 
     <!-- Cooking steps section -->
-    <h3>Steps</h3>
-    <ol>
-      <li>
+    <h3 class="heading">Steps</h3>
+    <ol class="list">
+      <li  class="list-item">
         Heat olive oil in a large sauté pan on medium heat. Add the chopped bell
         pepper and onion and cook for 5 minutes or until the onion becomes
         translucent.
       </li>
-      <li>Add garlic and spices and cook an additional minute.</li>
-      <li>
+      <li class="list-item">Add garlic and spices and cook an additional minute.</li>
+      <li class="list-item">
         Pour the can of tomatoes and juice into the pan and break down the
         tomatoes using a large spoon. Season with salt and pepper and bring the
         sauce to a simmer.
       </li>
-      <li>
+      <li class="list-item">
         Use your large spoon to make small wells in the sauce and crack the eggs
         into each well. Cook the eggs for 5 to 8 minutes, or until the eggs are
         done to your liking. You can also cover the pan with a lid to expedite
         the eggs cooking.
       </li>
-      <li>Garnish with chopped cilantro and parsley before serving.</li>
+      <li class="list-item">Garnish with chopped cilantro and parsley before serving.</li>
     </ol>
 
-    <a href="../index.html">Home</a>
+    <div class="links">
+      <a href="../index.html">Home</a>
+    </div>
   </body>
 </html>
